k8s/app/base/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clip-worker
  namespace: yt-clipper
spec:
  replicas: 3
  selector:
    matchLabels:
      app: clip-worker
  template:
    metadata:
      labels:
        app: clip-worker
    spec:
      containers:
        - name: worker
          image: backend
          command:
            - npm
          args:
            - run
            - worker:start

          volumeMounts:
            - name: clip-storage
              mountPath: /app/storage

          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: "2"
              memory: 4Gi

      volumes:
        - name: clip-storage
          persistentVolumeClaim:
            claimName: clip-storage
