k8s/app/base/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: yt-clipper
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
    - name: http
      port: 3000
      targetPort: 3000 #or could use http because we named the port in the deployment, but this is more explicit
